--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>884</width>
-    <height>426</height>
+    <width>880</width>
+    <height>398</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>170</x>
       <y>0</y>
       <width>20</width>
-      <height>401</height>
+      <height>371</height>
      </rect>
     </property>
     <property name="orientation">
@@ -32,8 +32,8 @@
      <rect>
       <x>10</x>
       <y>120</y>
-      <width>160</width>
-      <height>145</height>
+      <width>161</width>
+      <height>111</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -67,32 +67,32 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QSpinBox" name="spinBox_2"/>
+        <widget class="QSpinBox" name="spinBox_2">
+         <property name="minimum">
+          <number>-100000</number>
+         </property>
+         <property name="maximum">
+          <number>100000</number>
+         </property>
+         <property name="value">
+          <number>-150</number>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QSpinBox" name="spinBox_3"/>
+        <widget class="QSpinBox" name="spinBox_3">
+         <property name="minimum">
+          <number>-100000</number>
+         </property>
+         <property name="maximum">
+          <number>100000</number>
+         </property>
+         <property name="value">
+          <number>150</number>
+         </property>
+        </widget>
        </item>
       </layout>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>Генерация массива</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </widget>
@@ -114,7 +114,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>161</width>
+      <width>162</width>
       <height>91</height>
      </rect>
     </property>
@@ -174,7 +174,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>230</y>
       <width>161</width>
       <height>20</height>
      </rect>
@@ -187,7 +187,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
+      <y>250</y>
       <width>161</width>
       <height>120</height>
      </rect>
@@ -229,7 +229,7 @@
       <x>190</x>
       <y>10</y>
       <width>681</width>
-      <height>351</height>
+      <height>331</height>
      </rect>
     </property>
     <column>
@@ -250,7 +250,7 @@
     </column>
     <column>
      <property name="text">
-      <string>Время</string>
+      <string>Время (ms)</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
@@ -285,7 +285,7 @@
     <property name="geometry">
      <rect>
       <x>780</x>
-      <y>370</y>
+      <y>350</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -298,5 +298,22 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>794</x>
+     <y>357</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>722</x>
+     <y>363</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
