--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="documentMode">
+   <bool>false</bool>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="Line" name="line">
     <property name="geometry">
@@ -114,7 +117,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>162</width>
+      <width>168</width>
       <height>91</height>
      </rect>
     </property>
@@ -136,6 +139,9 @@
          <property name="checked">
           <bool>true</bool>
          </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
@@ -151,10 +157,16 @@
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QRadioButton" name="radioButton_4">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
           <string>Год</string>
          </property>
          <property name="checked">
+          <bool>true</bool>
+         </property>
+         <property name="autoExclusive">
           <bool>true</bool>
          </property>
         </widget>
@@ -163,6 +175,9 @@
         <widget class="QRadioButton" name="radioButton_3">
          <property name="text">
           <string>Население</string>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -294,6 +309,32 @@
      <string>Выход</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>350</y>
+      <width>131</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Исходный файл</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_7">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>350</y>
+      <width>151</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Отсортированный</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
@@ -310,8 +351,8 @@
      <y>357</y>
     </hint>
     <hint type="destinationlabel">
-     <x>722</x>
-     <y>363</y>
+     <x>769</x>
+     <y>365</y>
     </hint>
    </hints>
   </connection>
